solved cart issue on tablet and extract cart modal logic to main

--- a/src/components/cart/SCSS/cartModal.scss
+++ b/src/components/cart/SCSS/cartModal.scss
@@ -8,16 +8,15 @@
   position: absolute;
   background-color: $white-color;
   right: 0;
-  width: 462px;
-  height: 529px;
+  min-width: 30%;
+  height: calc(100vh - 13rem);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-  padding: 45px 35px;
+  border-radius: 0.5rem 0 0 0.5rem ;
+  padding: 1.5rem 2rem;
   overflow: scroll;
   opacity: 0;
-  transform: translateX(100%);
-  transition: all 0.1s ease-in-out;
+  // transform: translateX(100%);
+  // transition: all 0.1s ease-in-out;
   &__title {
     @include titleH3();
   }
@@ -34,11 +33,6 @@
       @include btn-hover($second-color, $white-color);
     }
   }
-}
-.modal-container-active {
-  opacity: 1;
-  transform: translateX(0%);
-  transition: all 0.3s ease-in-out;
 }
 
 .modal-container::-webkit-scrollbar {
@@ -125,9 +119,10 @@
 // MOBILE
 // ------------------------------------------
 .modal-container-mobile {
-  padding: 25px 15px;
+  position: absolute;
+  inset: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   &__close {
     position: absolute;
     right: 1rem;
